--- a/applications/garden/design/setup.css
+++ b/applications/garden/design/setup.css
@@ -29,7 +29,7 @@ div.Title {
 }
 h1 {
    color: #02455B;
-   width: 800px;
+   width: 568px;
    margin: 0 auto;
    padding: 0;
    font-size: 180%;
@@ -39,9 +39,9 @@ div.Form {
    text-align: center;
 }
 div.Form ul {
-   width: 800px;
+   width: 568px;
    margin: 0 auto;
-   padding: 40px;
+   padding: 40px 0;
    }
 div.Form div.Errors ul {
    padding: 0;
@@ -116,9 +116,7 @@ form ul li.Warning div {
 }
 form ul li label {
    font-weight: bold;
-   float: left;
    display: block;
-   width: 240px;
    padding: 8px 0 0;
    font-size: 120%;
    }
@@ -127,7 +125,7 @@ form ul li input.InputBox {
    -webkit-border-radius: 4px;
    font-size: 110%;
    padding: 8px;
-   width: 535px;
+   width: 550px;
    border: 1px solid #C0E7F5;
    color: #555 /* Body Text Font Color */;
 }
@@ -142,8 +140,8 @@ form ul li.Last {
 }
 div.Button {
    text-align: right;
-   padding: 12px 12px 30px;
-   width: 785px;
+   padding: 12px 0 30px;
+   width: 568px;
    margin: 0 auto;
 }
 div.Button a,
